Integrate code for creating Expression templates & questions